# japanese-learning

./: Dockerfile  edojap.py  edoweb.py  hello.py  index.html  jap.wasp.ovh.ini  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: build-and-push.yml
