[project]
name = "japanese-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "blinker==1.7.0",
    "click==8.1.7",
    "compact-json==1.6.1",
    "enum-tools==0.11.0",
    "flask==3.0.2",
    "gunicorn>=23.0.0",
    "importlib-resources==6.3.1",
    "itsdangerous==2.1.2",
    "jinja2==3.1.3",
    "markupsafe==2.1.5",
    "numbers-parser==4.10.3",
    "pendulum==3.0.0",
    "protobuf==5.26.0",
    "pygments==2.17.2",
    "python-dateutil==2.9.0.post0",
    "python-snappy==0.6.1",
    "regex==2022.10.31",
    "roman==3.3",
    "setuptools==69.2.0",
    "sigfig==1.3.3",
    "six==1.16.0",
    "sortedcontainers==2.4.0",
    "time-machine==2.14.0",
    "typing-extensions==4.10.0",
    "tzdata==2024.1",
    "uwsgi==2.0.24",
    "wcwidth==0.2.13",
    "werkzeug==3.0.1",
]
